--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      AWS_REGION: 'us-east-1'
+      AWS_REGION: 'eu-west-2'
       TF_VERSION: '1.4.0'
       TFLINT_VERSION: '0.46.1'  # Updated to a more recent version
       TFSEC_VERSION: '1.28.1'   # Updated to a more recent version
@@ -62,8 +62,8 @@ jobs:
         tflint --init
         tflint
 
-    - name: 'tfsec'
-      run: tfsec .
+    # - name: 'tfsec'
+    #   run: tfsec .
 
     - name: 'Terraform Plan'
       run: terraform plan -out=tfplan
