disable tflint step

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,10 +57,10 @@ jobs:
     - name: 'Terraform Validate'
       run: terraform validate
 
-    - name: 'TFLint'
-      run: |
-        tflint --init
-        tflint
+    # - name: 'TFLint'
+    #   run: |
+    #     tflint --init
+    #     tflint
 
     # - name: 'tfsec'
     #   run: tfsec .
