--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      AWS_REGION: 'eu-west-2'
+      AWS_REGION: 'ap-south-1'
       TF_VERSION: '1.4.0'
 
     steps:
